version/0.20/_sources/api/solver/_autosummary/settings/electrolyte_activity.rst.txt
:orphan:

.. _electrolyte_activity:

electrolyte_activity
====================

.. autoclass:: ansys.fluent.core.solver.settings_241.electrolyte_activity.electrolyte_activity
    :show-inheritance:

.. rubric:: Attributes

==================================   ===================================

Attribute                                                        Summary

==================================   ===================================
:ref:`method <method_4>`                 Select method for the property.

:ref:`value <value_1>`                                    'value' child.

:ref:`user_defined <user_defined>`                 'user_defined' child.

==================================   ===================================

.. rubric:: Included in:

==============================================   ===============================

Parent                                                                   Summary

==============================================   ===============================
:ref:`p2d_model_settings <p2d_model_settings>`       'p2d_model_settings' child.

==============================================   ===============================

